--- a/app/src/main/res/layout/activity_cliente_home.xml
+++ b/app/src/main/res/layout/activity_cliente_home.xml
@@ -7,4 +7,11 @@
     android:layout_height="match_parent"
     tools:context=".Cliente.ClienteHomeActivity">
 
+    <LinearLayout
+        android:layout_width="381dp"
+        android:layout_height="141dp"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"></LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
