--- a/app/src/main/res/layout/activity_cliente_ve_repartidor.xml
+++ b/app/src/main/res/layout/activity_cliente_ve_repartidor.xml
@@ -94,7 +94,7 @@
                 android:layout_weight="1"
                 android:layout_height="wrap_content"
                 android:fontFamily="sans-serif-condensed-medium"
-                android:text="Nombres: "
+                android:text="Nombres "
                 android:textColor="@color/light_green"
                 android:textSize="20sp"
                 android:textStyle="bold"/>
@@ -122,7 +122,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="sans-serif-condensed-medium"
-                android:text="Apellidos: "
+                android:text="Apellidos "
                 android:layout_weight="1"
                 android:textColor="@color/light_green"
                 android:textSize="20sp"
@@ -149,7 +149,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="sans-serif-condensed-medium"
-                android:text="DNI: "
+                android:text="DNI "
                 android:layout_weight="1"
                 android:textColor="@color/light_green"
                 android:textSize="20sp"
@@ -177,7 +177,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="sans-serif-condensed-medium"
-                android:text="Teléfono: "
+                android:text="Teléfono "
                 android:layout_weight="1"
                 android:textColor="@color/light_green"
                 android:textSize="20sp"
