--- a/app/src/main/res/layout/activity_cliente_perfil.xml
+++ b/app/src/main/res/layout/activity_cliente_perfil.xml
@@ -7,11 +7,18 @@
     android:layout_height="match_parent"
     tools:context=".Cliente.ClientePerfil">
 
-
-
-
-
-
+    <com.google.android.material.imageview.ShapeableImageView
+        android:id="@+id/shapeableImageView"
+        android:layout_width="150sp"
+        android:layout_height="150sp"
+        android:layout_marginTop="80dp"
+        android:scaleType="centerCrop"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
+        app:srcCompat="@drawable/hineilll" />
 
     <LinearLayout
         android:id="@+id/linearLayout4"
@@ -28,4 +35,34 @@
             android:layout_height="wrap_content"
             app:menu="@menu/cliente_menu" />
     </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/floating_action_button"
+            style="?attr/floatingActionButtonSmallStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:contentDescription="back"
+            app:srcCompat="@drawable/arrow_back_24px" />
+        <View
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1" />
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/logOut"
+            style="?attr/floatingActionButtonSmallStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:backgroundTint="@color/md_theme_errorContainer_mediumContrast"
+            android:contentDescription="back"
+            app:srcCompat="@drawable/logout_24px" />
+    </LinearLayout>
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
