--- a/app/src/main/res/layout/activity_cliente_detalle_compra.xml
+++ b/app/src/main/res/layout/activity_cliente_detalle_compra.xml
@@ -8,7 +8,7 @@
     tools:context=".Cliente.ClienteDetalleCompra">
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/floating_action_button"
+        android:id="@+id/goBackButton"
         style="?attr/floatingActionButtonSmallStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
