--- a/app/src/main/res/layout/activity_cliente_confirmacion_compra.xml
+++ b/app/src/main/res/layout/activity_cliente_confirmacion_compra.xml
@@ -45,7 +45,7 @@
 
 
         <Button
-            android:id="@+id/comeBackButton"
+            android:id="@+id/goToMenu"
             style="@style/Widget.Material3.Button.ElevatedButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
