--- a/app/src/main/res/layout/activity_cliente_home.xml
+++ b/app/src/main/res/layout/activity_cliente_home.xml
@@ -194,6 +194,7 @@
                         android:orientation="horizontal">
 
                         <com.google.android.material.button.MaterialButton
+                            android:id="@+id/go_button"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="45sp"
