--- a/app/src/main/res/layout/activity_cliente_notificaciones.xml
+++ b/app/src/main/res/layout/activity_cliente_notificaciones.xml
@@ -127,6 +127,7 @@
 
 
                     <TextView
+                        android:id="@+id/goToDetails"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="8sp"
