--- a/app/src/main/res/layout/activity_cliente_qr.xml
+++ b/app/src/main/res/layout/activity_cliente_qr.xml
@@ -8,7 +8,7 @@
     tools:context=".Cliente.ClienteQR">
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/floating_action_button"
+        android:id="@+id/backButtonQR"
         style="?attr/floatingActionButtonSmallStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
