--- a/app/src/main/res/layout/activity_login_recuperar_password_tercera_parte.xml
+++ b/app/src/main/res/layout/activity_login_recuperar_password_tercera_parte.xml
@@ -5,7 +5,9 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LogIn.LoginRecuperarPasswordPrimerPaso">
+    tools:context=".LogIn.LoginRecuperarPasswordTercerPaso">
+
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -17,67 +19,96 @@
             android:layout_marginStart="5sp"
             android:layout_marginTop="40sp"
             android:src="@drawable/icons8_izquierda_circulo_48"
-            android:onClick="retroceder"/>
+            android:onClick="retroceder"
+            />
 
         <TextView
             android:layout_marginTop="15sp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:text="Ingresa tu correo"
+            android:textAlignment="center"
+            android:text="Cambia tu contraseña"
             android:textColor="@color/light_green"
             android:textSize="40sp"
             android:textStyle="bold"/>
-
         <LinearLayout
             android:backgroundTint="#FBF5F0"
             android:layout_gravity="center_horizontal"
             android:layout_width="348dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="25sp"
+            android:layout_marginTop="15sp"
             android:background="@drawable/border_form"
             android:orientation="vertical" >
             <TextView
-                android:layout_marginTop="30sp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Correo"
-                android:textColor="@color/md_theme_scrim_mediumContrast"
-                android:layout_marginStart="28sp"
+                android:layout_marginTop="25sp"
+                android:layout_marginStart="20sp"
+                android:text="Nueva contraseña"
+                android:textSize="18sp"
                 android:textStyle="bold"
-                android:textSize="20sp"
-                android:layout_marginBottom="-20sp"/>
+                android:textColor="@color/black"
+                />
+
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="320sp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="30sp"
+                android:layout_marginTop="5sp"
                 android:layout_gravity="center_horizontal"
-                android:hint="Correo"
-                app:startIconDrawable="@drawable/mail_24px"
+                android:hint="Nueva contraseña"
+                app:endIconMode="password_toggle"
+                app:startIconDrawable="@drawable/person_24px"
                 >
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/email"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:maxLength="20"
-                    android:inputType="text"
-                    android:singleLine="true"/>
+                    android:inputType="textPassword"
+                    android:maxLength="20"/>
+            </com.google.android.material.textfield.TextInputLayout>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="15sp"
+                android:layout_marginStart="20sp"
+                android:text="Confirmar contraseña"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                android:textColor="@color/black"
+                />
+            <com.google.android.material.textfield.TextInputLayout
+                android:layout_width="320sp"
+                android:layout_marginTop="5sp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:hint="Repetir contraseña"
+                app:startIconDrawable="@drawable/group_24px"
+                app:endIconMode="password_toggle"
+                >
+                <com.google.android.material.textfield.TextInputEditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="textPassword"
+                    android:maxLength="20"/>
             </com.google.android.material.textfield.TextInputLayout>
 
+
             <Button
-                android:id="@+id/continuar1"
-                android:onClick="irSegundoPaso"
+                android:id="@+id/continuar2"
+                android:onClick="irPasoFinal"
                 style="@style/Widget.Material3.Button.ElevatedButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="18sp"
                 android:backgroundTint="@color/light_green"
-                android:text="   Continuar  "
+                android:text="  Finalizar  "
                 android:textColor="@color/white"
                 android:textStyle="bold"
                 android:layout_marginBottom="12sp"/>
         </LinearLayout>
+
     </LinearLayout>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
