--- a/app/src/main/res/layout/activity_cliente_home.xml
+++ b/app/src/main/res/layout/activity_cliente_home.xml
@@ -14,25 +14,22 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout2">
-
         <com.google.android.material.carousel.MaskableFrameLayout
-            xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:app="http://schemas.android.com/apk/res-auto"
-            xmlns:tools="http://schemas.android.com/tools"
             android:id="@+id/carousel_item_container"
-            android:layout_width="150dp"
-            android:layout_height="match_parent"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginStart="4dp"
             android:layout_marginEnd="4dp"
             android:foreground="?attr/selectableItemBackground"
             app:shapeAppearance="?attr/shapeAppearanceCornerExtraLarge">
 
-            <ImageView
-                android:id="@+id/carousel_image_view"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:scaleType="centerCrop"
-                app:srcCompat="@drawable/comida_rapida" />
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/carousel_recycler_view"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal"
+                android:clipChildren="false"
+                android:clipToPadding="false" />
         </com.google.android.material.carousel.MaskableFrameLayout>
     </LinearLayout>
 
