--- a/app/src/main/res/layout/activity_cliente_notificaciones.xml
+++ b/app/src/main/res/layout/activity_cliente_notificaciones.xml
@@ -54,7 +54,8 @@
             app:menu="@menu/cliente_menu" />
     </LinearLayout>
 
-    <LinearLayout
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerViewNoti"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginTop="10dp"
@@ -65,85 +66,11 @@
         app:layout_constraintTop_toBottomOf="@+id/linearLayout7">
 
 
-        <com.google.android.material.card.MaterialCardView
-            style="?attr/materialCardViewElevatedStyle"
-            android:layout_width="380sp"
-            android:layout_height="130sp"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="10dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.516"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <ImageView
-                    android:layout_width="110sp"
-                    android:layout_height="130sp"
-                    android:scaleType="centerCrop"
-                    app:srcCompat="@drawable/bembos_logo" />
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:padding="10dp">
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal"
-                        android:padding="5sp">
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:fontFamily="sans-serif-condensed"
-                            android:text="#42"
-                            android:textAppearance="?attr/textAppearanceTitleMedium"
-                            android:textColor="@color/light_green" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:textColor="@color/black"
-                            android:fontFamily="sans-serif-condensed"
-                            android:text="23/09/24 - 19:00"
-                            android:textAppearance="?attr/textAppearanceTitleMedium" />
-                    </LinearLayout>
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:fontFamily="sans-serif-condensed"
-                        android:textColor="@color/black"
-                        android:text="El repartidor a recogido tu pedido del restaurante."
-                        android:textAppearance="?attr/textAppearanceTitleMedium" />
-
-
-                    <TextView
-                        android:id="@+id/goToDetails"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="8sp"
-                        android:fontFamily="sans-serif-condensed"
-                        android:text="Ver detalle"
-                        android:textAppearance="?attr/textAppearanceTitleMedium"
-                        android:textColor="@color/light_green" />
-
-                </LinearLayout>
-
-            </LinearLayout>
-        </com.google.android.material.card.MaterialCardView>
 
 
 
-    </LinearLayout>
+
+    </androidx.recyclerview.widget.RecyclerView>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
