--- a/app/src/main/res/layout/irv_notificaciones.xml
+++ b/app/src/main/res/layout/irv_notificaciones.xml
@@ -7,7 +7,7 @@
 
     <com.google.android.material.card.MaterialCardView
         style="?attr/materialCardViewElevatedStyle"
-        android:layout_width="380sp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="12dp"
@@ -21,6 +21,7 @@
             android:orientation="horizontal">
 
             <ImageView
+                android:id="@+id/imgMsg"
                 android:layout_width="110sp"
                 android:layout_height="130sp"
                 android:scaleType="centerCrop"
@@ -76,7 +77,8 @@
                     android:fontFamily="sans-serif-condensed"
                     android:text="Ver detalle"
                     android:textAppearance="?attr/textAppearanceTitleMedium"
-                    android:textColor="@color/light_green" />
+                    android:textColor="@color/light_green"
+                    android:visibility="visible"/>
 
             </LinearLayout>
 
