--- a/app/src/main/res/layout/sup_admin_cliente_list.xml
+++ b/app/src/main/res/layout/sup_admin_cliente_list.xml
@@ -1,137 +1,138 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    style="?attr/materialCardViewElevatedStyle"
-    android:layout_width="369dp"
-    android:layout_height="100dp"
-    android:layout_marginStart="16dp"
-    android:layout_marginTop="14dp"
-    android:layout_marginEnd="16dp"
-    android:layout_marginBottom="6dp"
-    app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintHorizontal_bias="0.075"
-    app:layout_constraintStart_toStartOf="parent">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
 
-    <LinearLayout
+    <com.google.android.material.card.MaterialCardView
+        style="?attr/materialCardViewElevatedStyle"
         android:layout_width="match_parent"
         android:layout_height="100dp"
-        android:gravity="center_horizontal"
-        android:orientation="horizontal">
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.075"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="100dp"
-            android:gravity="center_horizontal|center_vertical"
+            android:gravity="center_horizontal"
             android:orientation="horizontal">
-
-            <ImageView
-                android:id="@+id/imgCliente"
-                android:layout_width="50dp"
-                android:layout_height="52dp"
-                android:background="@drawable/circular_image_background"
-                android:clipToOutline="true"
-                android:src="@drawable/costumer_green" />
 
             <LinearLayout
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:layout_marginStart="1dp">
+                android:layout_height="100dp"
+                android:gravity="center_horizontal|center_vertical"
+                android:orientation="horizontal">
 
-                <TextView
-                    android:id="@+id/tv_nombre"
+                <ImageView
+                    android:id="@+id/imgCliente"
+                    android:layout_width="50dp"
+                    android:layout_height="52dp"
+                    android:background="@drawable/circular_image_background"
+                    android:clipToOutline="true"
+                    android:src="@drawable/costumer_green" />
+
+                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Nombre: Lancelot del Lago"
-                    android:textSize="13sp"
-                    android:textStyle="bold" />
+                    android:orientation="vertical"
+                    android:layout_marginStart="1dp">
 
-                <TextView
-                    android:id="@+id/tv_dni"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="DNI: 12345678"
-                    android:textSize="13sp"
-                    android:textStyle="bold" />
+                    <TextView
+                        android:id="@+id/tv_nombre"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Nombre: Lancelot del Lago"
+                        android:textSize="13sp"
+                        android:textStyle="bold" />
 
-                <TextView
-                    android:id="@+id/tv_correo"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Correo: cliente@gmail.com"
-                    android:textSize="13sp"
-                    android:textStyle="bold" />
-            </LinearLayout>
+                    <TextView
+                        android:id="@+id/tv_dni"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="DNI: 12345678"
+                        android:textSize="13sp"
+                        android:textStyle="bold" />
 
-
-            <LinearLayout
-                android:layout_width="70sp"
-                android:layout_height="match_parent"
-                android:layout_marginStart="-19sp"
-                android:gravity="center_horizontal|center_vertical"
-                android:orientation="vertical">
-
-                <com.google.android.material.floatingactionbutton.FloatingActionButton
-                    android:id="@+id/bt_info"
-                    style="?attr/floatingActionButtonSmallStyle"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:layout_marginStart="10sp"
-                    android:contentDescription="Información"
-                    android:onClick="vistaPerfilCliente"
-                    app:backgroundTint="@color/light_yellow"
-                    app:srcCompat="@drawable/baseline_eye_24"
-                    app:tint="@color/white" />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="70sp"
-                android:layout_height="match_parent"
-                android:layout_marginStart="-17sp"
-                android:gravity="center_horizontal|center_vertical"
-                android:orientation="vertical">
-
-                <com.google.android.material.floatingactionbutton.FloatingActionButton
-                    android:id="@+id/bt_activar"
-                    style="?attr/floatingActionButtonSmallStyle"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:layout_marginStart="10sp"
-                    android:contentDescription="Activar"
-                    app:backgroundTint="@color/light_green"
-                    app:srcCompat="@drawable/baseline_check_circle_24"
-                    app:tint="@color/white" />
-
-            </LinearLayout>
+                    <TextView
+                        android:id="@+id/tv_correo"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Correo: cliente@gmail.com"
+                        android:textSize="13sp"
+                        android:textStyle="bold" />
+                </LinearLayout>
 
 
-            <LinearLayout
-                android:layout_width="70sp"
-                android:layout_height="match_parent"
-                android:layout_marginStart="-18sp"
-                android:gravity="center_horizontal|center_vertical"
-                android:orientation="vertical">
+                <LinearLayout
+                    android:layout_width="70sp"
+                    android:layout_height="match_parent"
+                    android:layout_marginStart="-19sp"
+                    android:gravity="center_horizontal|center_vertical"
+                    android:orientation="vertical">
 
-                <com.google.android.material.floatingactionbutton.FloatingActionButton
-                    android:id="@+id/bt_desactivar"
-                    style="?attr/floatingActionButtonSmallStyle"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:layout_marginStart="10sp"
-                    android:contentDescription="Desactivar"
-                    app:backgroundTint="@color/md_theme_errorContainer_mediumContrast"
-                    app:srcCompat="@drawable/baseline_deactive_24"
-                    app:tint="@color/white" />
+                    <com.google.android.material.floatingactionbutton.FloatingActionButton
+                        android:id="@+id/bt_info"
+                        style="?attr/floatingActionButtonSmallStyle"
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:layout_marginStart="10sp"
+                        android:contentDescription="Información"
+                        android:onClick="vistaPerfilCliente"
+                        app:backgroundTint="@color/light_yellow"
+                        app:srcCompat="@drawable/baseline_eye_24"
+                        app:tint="@color/white" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="70sp"
+                    android:layout_height="match_parent"
+                    android:layout_marginStart="-17sp"
+                    android:gravity="center_horizontal|center_vertical"
+                    android:orientation="vertical">
+
+                    <com.google.android.material.floatingactionbutton.FloatingActionButton
+                        android:id="@+id/bt_activar"
+                        style="?attr/floatingActionButtonSmallStyle"
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:layout_marginStart="10sp"
+                        android:contentDescription="Activar"
+                        app:backgroundTint="@color/light_green"
+                        app:srcCompat="@drawable/baseline_check_circle_24"
+                        app:tint="@color/white" />
+
+                </LinearLayout>
+
+
+                <LinearLayout
+                    android:layout_width="70sp"
+                    android:layout_height="match_parent"
+                    android:layout_marginStart="-18sp"
+                    android:gravity="center_horizontal|center_vertical"
+                    android:orientation="vertical">
+
+                    <com.google.android.material.floatingactionbutton.FloatingActionButton
+                        android:id="@+id/bt_desactivar"
+                        style="?attr/floatingActionButtonSmallStyle"
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:layout_marginStart="10sp"
+                        android:contentDescription="Desactivar"
+                        app:backgroundTint="@color/md_theme_errorContainer_mediumContrast"
+                        app:srcCompat="@drawable/baseline_deactive_24"
+                        app:tint="@color/white" />
+
+                </LinearLayout>
+
 
             </LinearLayout>
 
 
         </LinearLayout>
 
-
-    </LinearLayout>
-
-</com.google.android.material.card.MaterialCardView>
+    </com.google.android.material.card.MaterialCardView>
+</androidx.constraintlayout.widget.ConstraintLayout>
