--- a/app/src/main/res/layout/activity_super_admin_perfil.xml
+++ b/app/src/main/res/layout/activity_super_admin_perfil.xml
@@ -49,6 +49,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:backgroundTint="#BF102D"
+            android:onClick="cerrarSesion"
             android:contentDescription="Cerrar Sesión"
             android:shadowColor="@color/gray"
             android:text="Salir"
@@ -290,7 +291,7 @@
         android:id="@+id/bottom_navigation"
         android:layout_width="match_parent"
         android:layout_height="130dp"
-        android:layout_marginTop="640dp"
+        android:layout_marginTop="670dp"
         app:layout_anchorGravity="bottom|center"
         app:layout_constraintBottom_toBottomOf="@id/linearLayout"
         app:layout_constraintEnd_toEndOf="parent"
