--- a/app/src/main/res/layout/activity_super_admin_registro_administrador1.xml
+++ b/app/src/main/res/layout/activity_super_admin_registro_administrador1.xml
@@ -35,7 +35,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:padding="16dp"
+        android:padding="4dp"
         app:layout_anchor="@+id/linearLayout"
         app:layout_anchorGravity="center"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
@@ -55,117 +55,128 @@
                 android:textStyle="bold" />
         </LinearLayout>
 
-    </LinearLayout>
-
-
-
-    <LinearLayout
-        android:id="@+id/linearLayout4"
-        android:layout_width="360dp"
-        android:layout_height="401dp"
-        android:background="@drawable/layout_border"
-        android:orientation="horizontal"
-        app:layout_anchor="@+id/linearLayout"
-        app:layout_anchorGravity="center">
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/linearLayout2"
-        android:layout_width="311dp"
-        android:layout_height="385dp"
-        android:layout_marginTop="14dp"
-        android:orientation="vertical"
-        app:layout_anchor="@+id/linearLayout"
-        app:layout_anchorGravity="center">
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="6dp"
-            android:hint="@string/nombre">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/adminNombre"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:inputType="text"
-                android:text=" "
-                app:startIconDrawable="@drawable/baseline_person_outline_24" />
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="6dp"
-            android:hint="@string/apellido">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/adminApellido"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:inputType="text"
-                android:text=" "
-                app:startIconDrawable="@drawable/baseline_person_outline_24" />
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <Spinner
-            android:id="@+id/spinner"
-            android:layout_width="match_parent"
-            android:layout_height="55dp"
-            android:layout_marginTop="6dp"
-            android:entries="@array/elementos"
-            android:popupBackground="@drawable/spinner_border"
-            android:spinnerMode="dropdown" />
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="6dp"
-            android:hint="@string/dni">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/adminNumeroDocumento"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:inputType="text"
-                android:text=" "
-                app:startIconDrawable="@drawable/baseline_person_outline_24" />
-        </com.google.android.material.textfield.TextInputLayout>
-
-
         <LinearLayout
-            android:layout_width="285dp"
-            android:layout_height="113dp"
+            android:id="@+id/linearLayout4"
+            android:layout_width="360dp"
+            android:layout_height="401dp"
+            android:background="@drawable/layout_border"
             android:orientation="horizontal"
-            android:gravity="center_vertical|center_horizontal"
-            android:layout_margin="16dp">
+            app:layout_anchor="@+id/linearLayout"
+            app:layout_anchorGravity="center">
 
-            <Button
-                android:id="@+id/continuar1"
-                android:onClick="vistaRegistroAdmin2"
-                style="@style/Widget.Material3.Button.ElevatedButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="8dp"
-                android:backgroundTint="@color/light_green"
-                android:text="Continuar"
-                android:textColor="@color/white"
-                android:textStyle="bold" />
+            <LinearLayout
+                android:id="@+id/linearLayout2"
+                android:layout_width="311dp"
+                android:layout_height="385dp"
+                android:layout_marginTop="14dp"
+                android:layout_marginStart="19dp"
+                android:orientation="vertical"
+                app:layout_anchor="@+id/linearLayout"
+                app:layout_anchorGravity="center">
 
-            <Button
-                android:id="@+id/cancelar1"
-                android:onClick="vistaPanelRestaurante"
-                style="@style/Widget.Material3.Button.ElevatedButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:backgroundTint="@color/md_theme_error"
-                android:text="Cancelar"
-                android:textColor="@color/white"
-                android:textStyle="bold" />
+                <com.google.android.material.textfield.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="6dp"
+                    android:hint="@string/nombre">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/adminNombre"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:inputType="text"
+                        android:text=" "
+                        app:startIconDrawable="@drawable/baseline_person_outline_24" />
+                </com.google.android.material.textfield.TextInputLayout>
+
+                <com.google.android.material.textfield.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="6dp"
+                    android:hint="@string/apellido">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/adminApellido"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:inputType="text"
+                        android:text=" "
+                        app:startIconDrawable="@drawable/baseline_person_outline_24" />
+                </com.google.android.material.textfield.TextInputLayout>
+
+                <Spinner
+                    android:id="@+id/spinner"
+                    android:layout_width="match_parent"
+                    android:layout_height="55dp"
+                    android:layout_marginTop="6dp"
+                    android:entries="@array/elementos"
+                    android:popupBackground="@drawable/spinner_border"
+                    android:spinnerMode="dropdown" />
+
+                <com.google.android.material.textfield.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="6dp"
+                    android:hint="@string/dni">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/adminNumeroDocumento"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:inputType="text"
+                        android:text=" "
+                        app:startIconDrawable="@drawable/baseline_person_outline_24" />
+                </com.google.android.material.textfield.TextInputLayout>
+
+
+                <LinearLayout
+                    android:layout_width="285dp"
+                    android:layout_height="113dp"
+                    android:orientation="horizontal"
+                    android:gravity="center_vertical|center_horizontal"
+                    android:layout_margin="16dp">
+
+                    <Button
+                        android:id="@+id/continuar1"
+                        android:onClick="vistaRegistroAdmin2"
+                        style="@style/Widget.Material3.Button.ElevatedButton"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="8dp"
+                        android:backgroundTint="@color/light_green"
+                        android:text="Continuar"
+                        android:textColor="@color/white"
+                        android:textStyle="bold" />
+
+                    <Button
+                        android:id="@+id/cancelar1"
+                        android:onClick="vistaPanelRestaurante"
+                        style="@style/Widget.Material3.Button.ElevatedButton"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="8dp"
+                        android:backgroundTint="@color/md_theme_error"
+                        android:text="Cancelar"
+                        android:textColor="@color/white"
+                        android:textStyle="bold" />
+
+                </LinearLayout>
+            </LinearLayout>
 
         </LinearLayout>
-    </LinearLayout>
 
+        <com.google.android.material.bottomnavigation.BottomNavigationView
+            android:id="@+id/bottom_navigation"
+            android:layout_width="match_parent"
+            android:layout_height="130dp"
+            android:layout_marginTop="76dp"
+            app:layout_anchorGravity="bottom|center"
+            app:layout_constraintBottom_toBottomOf="@id/linearLayout"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:menu="@menu/bottom_navigation_superadmin"
+            tools:layout_editor_absoluteX="-14dp"
+            tools:layout_editor_absoluteY="578dp" />
+
+    </LinearLayout>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
