--- a/app/src/main/res/layout/activity_super_admin_registro_restaurante2.xml
+++ b/app/src/main/res/layout/activity_super_admin_registro_restaurante2.xml
@@ -43,9 +43,8 @@
     <LinearLayout
         android:id="@+id/linearLayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="743dp"
         android:orientation="vertical"
-        android:padding="16dp"
         app:layout_anchor="@+id/linearLayout"
         app:layout_anchorGravity="center"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
@@ -65,88 +64,106 @@
                 android:textStyle="bold" />
         </LinearLayout>
 
-
-    </LinearLayout>
-
-
-    <LinearLayout
-        android:id="@+id/linearLayout4"
-        android:layout_width="360dp"
-        android:layout_height="401dp"
-        android:background="@drawable/layout_border"
-        android:orientation="horizontal"
-        app:layout_anchor="@+id/linearLayout"
-        app:layout_anchorGravity="center">
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/linearLayout2"
-        android:layout_width="311dp"
-        android:layout_height="385dp"
-        android:layout_marginTop="14dp"
-        android:orientation="vertical"
-        app:layout_anchor="@+id/linearLayout"
-        app:layout_anchorGravity="center">
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="6dp"
-            android:hint="Ubicación">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/ubicacionRestaurante"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:inputType="text"
-                android:text=" "
-                app:startIconDrawable="@drawable/baseline_fmd_good_24"
-                />
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <ImageView
-            android:id="@+id/fotoRepartidor"
-            android:layout_width="210dp"
-            android:layout_height="210dp"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="30dp"
-            android:src="@drawable/mapa"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
         <LinearLayout
-            android:layout_width="285dp"
-            android:layout_height="89dp"
+            android:id="@+id/linearLayout4"
+            android:layout_width="360dp"
+            android:layout_height="401dp"
             android:layout_margin="5dp"
-            android:gravity="center_vertical|center_horizontal"
-            android:orientation="horizontal">
+            android:background="@drawable/layout_border"
+            android:orientation="horizontal"
+            app:layout_anchor="@+id/linearLayout"
+            app:layout_anchorGravity="center">
 
-            <Button
-                android:id="@+id/continuar1"
-                android:onClick="vistaRegistroRestauranteCorrect"
-                style="@style/Widget.Material3.Button.ElevatedButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="8dp"
-                android:backgroundTint="@color/light_green"
-                android:text="Registrar"
-                android:textColor="@color/white"
-                android:textStyle="bold" />
+            <LinearLayout
+                android:id="@+id/linearLayout2"
+                android:layout_width="311dp"
+                android:layout_height="385dp"
+                android:layout_marginStart="23dp"
+                android:layout_marginTop="14dp"
+                android:orientation="vertical"
+                app:layout_anchor="@+id/linearLayout"
+                app:layout_anchorGravity="center">
 
-            <Button
-                android:id="@+id/cancelar1"
-                android:onClick="vistaPanelRestaurante"
-                style="@style/Widget.Material3.Button.ElevatedButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:backgroundTint="@color/md_theme_error"
-                android:text="Cancelar"
-                android:textColor="@color/white"
-                android:textStyle="bold" />
+                <com.google.android.material.textfield.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="6dp"
+                    android:hint="Ubicación">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/ubicacionRestaurante"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:inputType="text"
+                        android:text=" "
+                        app:startIconDrawable="@drawable/baseline_fmd_good_24" />
+                </com.google.android.material.textfield.TextInputLayout>
+
+                <ImageView
+                    android:id="@+id/fotoRepartidor"
+                    android:layout_width="210dp"
+                    android:layout_height="210dp"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="30dp"
+                    android:src="@drawable/mapa"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <LinearLayout
+                    android:layout_width="285dp"
+                    android:layout_height="89dp"
+                    android:layout_margin="5dp"
+                    android:gravity="center_vertical|center_horizontal"
+                    android:orientation="horizontal">
+
+                    <Button
+                        android:id="@+id/continuar1"
+                        style="@style/Widget.Material3.Button.ElevatedButton"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="8dp"
+                        android:backgroundTint="@color/light_green"
+                        android:onClick="vistaRegistroRestauranteCorrect"
+                        android:text="Registrar"
+                        android:textColor="@color/white"
+                        android:textStyle="bold" />
+
+                    <Button
+                        android:id="@+id/cancelar1"
+                        style="@style/Widget.Material3.Button.ElevatedButton"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="8dp"
+                        android:backgroundTint="@color/md_theme_error"
+                        android:onClick="vistaPanelRestaurante"
+                        android:text="Cancelar"
+                        android:textColor="@color/white"
+                        android:textStyle="bold" />
+
+                </LinearLayout>
+            </LinearLayout>
 
         </LinearLayout>
+
+        <com.google.android.material.bottomnavigation.BottomNavigationView
+            android:id="@+id/bottom_navigation"
+            android:layout_width="match_parent"
+            android:layout_height="130dp"
+            android:layout_marginTop="94dp"
+            app:layout_anchorGravity="bottom|center"
+            app:layout_constraintBottom_toBottomOf="@id/linearLayout"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:menu="@menu/bottom_navigation_superadmin"
+            tools:layout_editor_absoluteX="-14dp"
+            tools:layout_editor_absoluteY="578dp" />
+
     </LinearLayout>
+
+
+
+
+
+
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
