--- a/app/src/main/res/layout/sup_admin_cliente_list.xml
+++ b/app/src/main/res/layout/sup_admin_cliente_list.xml
@@ -7,7 +7,8 @@
     <com.google.android.material.card.MaterialCardView
         style="?attr/materialCardViewElevatedStyle"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="90dp"
+        android:layout_margin="4dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.075"
@@ -16,13 +17,13 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="100dp"
+            android:layout_height="90dp"
             android:gravity="center_horizontal"
             android:orientation="horizontal">
 
             <LinearLayout
                 android:layout_width="wrap_content"
-                android:layout_height="100dp"
+                android:layout_height="90dp"
                 android:gravity="center_horizontal|center_vertical"
                 android:orientation="horizontal">
 
